<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@drawable/header"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/welcome_to_fan_shop"
            android:textColor="#fff"
            android:textSize="35sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:text="@string/reset_password"
        android:textColor="#ad168b"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="35dp"
        android:layout_marginTop="18dp"
        android:text="@string/email"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/shape"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/btnSendOTP"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/send_otp"
            android:textColor="@color/tim" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/otpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <EditText
            android:id="@+id/edtOTP"
            android:layout_width="253dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape"
            android:hint="@string/enter_otp"
            android:inputType="number"
            android:maxLength="6"
            />

        <Button
            android:id="@+id/btnVerifyOTP"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/verify_otp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:clickable="true"
        android:onClick="goToSignIn"
        android:text="@string/back_to_login"
        android:textColor="#ad168b"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:visibility="invisible"/>


</LinearLayout>