<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@drawable/bg_search_input"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:background="@null"
            android:hint="search product"
            android:imeOptions="actionSearch"
            android:paddingLeft="8dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_above="@id/bottom"/>

    <FrameLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="@color/white"/>

        <com.example.prm392.custom.TabButtonGroup
            android:id="@+id/tab_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="11sp"
                android:text="@string/main_home"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="11sp"
                android:text="@string/main_category"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="11sp"
                android:text="@string/main_cart"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="11sp"
                android:gravity="center"
                android:text="@string/main_mine"/>


        </com.example.prm392.custom.TabButtonGroup>
    </FrameLayout>

</RelativeLayout>